--- a/src/index.css
+++ b/src/index.css
@@ -322,6 +322,8 @@ textarea {
     url(/assets/fonts/Lato.woff) format("woff");
 } */
 
+/* General styles */
+
 html {
   font-size: 62.5%;
 }
@@ -330,8 +332,6 @@ body {
   font-size: 1.4rem;
   font-family: Lato;
 }
-
-/* General styles */
 
 ul {
   padding: 0;
@@ -367,6 +367,16 @@ p {
   margin: 0 auto;
 }
 
+.icon {
+  font-size: 1.8rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+/* Buttons */
+
 .btn {
   background-color: transparent;
   border: unset;
@@ -374,11 +384,10 @@ p {
 
 .btn-add {
   width: 90%;
-  border: 1px solid rgb(233, 150, 122);
+  border: unset;
   background-color: rgba(233, 150, 122, 0.5);
   overflow: hidden;
   padding: 10px 0;
-  margin-top: 20px;
   border-radius: 5px;
   position: relative;
   cursor: pointer;
@@ -394,12 +403,12 @@ p {
   content: "";
   position: absolute;
   top: 0;
-  background-color: darksalmon;
   left: 0;
   height: 100%;
   width: 100%;
   transform: scaleY(-1);
   transition: transform 300ms ease-in;
+  background-color: darksalmon;
   z-index: -1;
 }
 
@@ -413,19 +422,15 @@ p {
 }
 
 .btn-close:hover,
-.btn-close:focus {
-  color: darkolivegreen;
-}
-
+.btn-close:focus,
 .icon {
-  font-size: 1.8rem;
   color: darkolivegreen;
 }
 
 /* Layout */
+
 .row {
   display: flex;
-  flex-wrap: wrap;
   margin: 0 -20px;
 }
 
@@ -433,14 +438,13 @@ p {
   justify-content: center;
 }
 
-.col-auto {
-  flex: 0 1 auto;
+.row.row--column {
+  flex-direction: column;
+  align-items: center;
 }
 
-.col-20 {
-  flex: 0 1 20%;
-  max-width: calc(20% - 20px);
-  margin: 0 10px;
+.col-auto {
+  flex: 0 1 auto;
 }
 
 .col-33 {
@@ -453,15 +457,10 @@ p {
   text-align: center;
   padding: 30px;
 }
+
 .col-40 {
   flex: 0 1 40%;
   max-width: calc(40% - 20px);
-  margin: 0 10px;
-}
-
-.col-50 {
-  flex: 0 1 50%;
-  max-width: calc(50% - 20px);
   margin: 0 10px;
 }
 
@@ -471,24 +470,22 @@ p {
   margin: 0 10px;
 }
 
-.col-80 {
-  flex: 0 1 80%;
-  max-width: calc(80% - 20px);
-  margin: 0 10px;
-}
-
-section {
+.section {
   width: 80%;
 }
 
-/* Header styles */
+.section .row {
+  flex-wrap: wrap;
+}
+
+/* Header */
 
 .header {
   background-image: url("https://images.unsplash.com/photo-1563227812-0ea4c22e6cc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50%;
-  min-height: 60vh;
+  min-height: 65vh;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -509,11 +506,10 @@ section {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-h1 {
-  position: relative;
+.header-title h1 {
   font-size: 5rem;
-  text-transform: uppercase;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 /* Fixed Bar */
@@ -533,10 +529,6 @@ h1 {
   z-index: 10;
 }
 
-.fixed-bar p {
-  padding: 0 7.5%;
-}
-
 /* Catalogue */
 
 .catalogue-item {
@@ -544,12 +536,12 @@ h1 {
   overflow: hidden;
 }
 
-.item-title {
-  font-size: 2rem;
+.item-title,
+.item-price {
+  font-size: 1.8rem;
 }
 
 .item-price {
-  font-size: 2rem;
   font-weight: bold;
   margin: 15px 0;
 }
@@ -558,37 +550,35 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #000;
-  border-radius: 5px;
+  border: 1px solid black;
+  height: 5vh;
+  width: 100%;
+  border-radius: 3px;
+  width: 20%;
+  margin-bottom: 15px;
 }
 
 /* Modal */
 
-.btn-cart,
-.btn-close {
-  background-color: transparent;
-  border: unset;
-}
-
 .modal {
   position: absolute;
-  width: 45%;
-  background: white;
   top: 0;
   right: -45%;
+  width: 45%;
+  height: 100vh;
   padding: 40px 50px;
   overflow: scroll;
-  height: 80vh;
+  background-color: white;
   transition: right 300ms ease-in;
 }
 
 .modal-list-title {
-  font-size: 3rem;
+  font-size: 2rem;
   margin: 40px 0 80px;
   text-align: center;
 }
 
-.bg {
+.add-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -599,22 +589,23 @@ h1 {
   z-index: -10;
 }
 
-.bg-none {
-  display: none;
+.remove-overlay {
+  background-color: transparent;
 }
 
-.openModal {
+.open-modal {
   right: 0;
 }
 
-.closeModal {
-  right: -45%;
-}
-
 /* Cart List */
+
 .cart-item-image {
   border-right: 1px solid darksalmon;
   border-bottom: 1px solid darksalmon;
+}
+
+.row.cart-item {
+  margin-bottom: 50px;
 }
 
 .row.cart-item-info {
@@ -630,16 +621,6 @@ h1 {
   font-size: 1.8rem;
 }
 
-.cart-item-info p {
-  padding: 0;
-}
-
-.cart-item-info h3 {
-  font-weight: bold;
-  font-size: 2rem;
-  margin-top: 10px;
-}
-
 .cart-item-count {
   width: 35px;
   height: 35px;
@@ -650,12 +631,119 @@ h1 {
   border-radius: 5px;
 }
 
-.cart-item-update {
+.cart-item-info h3 {
+  font-weight: bold;
+  font-size: 2rem;
+  margin-top: 10px;
+}
+
+.cart-update-count {
   position: absolute;
   bottom: 0;
   right: 40px;
 }
 
-.row.cart-item {
-  margin-bottom: 50px;
+@media (max-width: 980px) {
+  .section {
+    width: 90%;
+  }
+
+  .col-33 {
+    padding: 20px;
+  }
+
+  .cart-item-info h3 {
+    font-size: 1.6rem;
+  }
+
+  .modal {
+    width: 60%;
+    right: -100%;
+  }
+
+  .remove-overlay {
+    background-color: transparent;
+  }
+
+  .open-modal {
+    right: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .col-33 {
+    flex-basis: 50%;
+    max-width: calc(50% - 40px);
+  }
+
+  .header-title h1 {
+    text-align: center;
+    font-size: 3.5rem;
+  }
+
+  .modal {
+    padding: 20px 30px;
+  }
+
+  .cart-item-info h3,
+  .item-title,
+  .item-price {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 570px) {
+  .btn-add {
+    border-radius: unset;
+    padding: 17px 0;
+  }
+  
+  .section .row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+.col-33 {
+    flex-basis: 75%;
+    max-width: calc(75% - 40px);
+    padding: 0;
+  }
+
+  .modal {
+    width: 100%;
+    right: -100%;
+  }
+
+  .modal-list-title {
+    font-size: 2.6rem;
+  }
+
+  .remove-overlay {
+    background-color: transparent;
+  }
+
+  .open-modal {
+    right: 0;
+  }
+
+  .cart-item-count {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 480px) {
+  .wrapper {
+    width: 90%;
+  }
+
+  .col-33 {
+    flex-basis: 90%;
+    max-width: calc(90% - 40px);
+  }
+
+  .header-title h1,
+  .btn-close {
+    font-size: 2.8rem;
+  }
 }
